--- a/res/layout/activity_edit_task.xml
+++ b/res/layout/activity_edit_task.xml
@@ -1,95 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp" >
-
+        android:paddingRight="10dp">
         <TextView
-            android:id="@+id/tvDateTime"
-            android:layout_width="wrap_content"
+            android:id="@+id/text_datetime"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginTop="5dp"
-            android:text="Wed. November 26, 2014 8:34PM"
+            android:text="@string/edit_task__default_date"
             android:textSize="14sp" />
-    </RelativeLayout>
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp" >
-
+        android:paddingRight="10dp">
         <EditText
-            android:id="@+id/txtTaskTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:id="@+id/edit_task_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:layout_weight="1"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:background="@drawable/noneborder"
+            android:background="@drawable/blackborder"
             android:ems="10"
-            android:hint="タスクを入力"
-            android:paddingLeft="5dp" >
-
-            <requestFocus />
-        </EditText>
-
+            android:singleLine="true"
+            android:hint="@string/edit_task__title_placeholder"
+            android:paddingLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:nextFocusDown="@+id/edit_memo" />
         <Button
-            android:id="@+id/btnChooseDate"
+            android:id="@+id/button_datetime"
             android:layout_width="39dp"
             android:layout_height="39dp"
-            android:layout_marginLeft="30dp"
-            android:layout_toRightOf="@+id/txtTaskTitle"
             android:background="@drawable/ic_action_time" />
-
-    </RelativeLayout>
+    </LinearLayout>
 
     <EditText
-        android:id="@+id/txtMemo"
+        android:id="@+id/edit_memo"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="fill_parent"
+        android:minHeight="40dp"
+        android:layout_weight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/noneborder"
+        android:background="@drawable/blackborder"
         android:ems="10"
         android:gravity="top"
-        android:paddingTop="5dp"
+        android:paddingTop="10dp"
         android:paddingLeft="5dp"
         android:inputType="textMultiLine"
-        android:focusable="false" 
-        android:focusableInTouchMode="false"
-        android:hint="メモを入力"/>
+        android:isScrollContainer="true"
+        android:hint="@string/edit_task__memo_placeholder"
+        android:nextFocusDown="@+id/edit_task_title">
+        <requestFocus />
+    </EditText>
 
-    <Button
-        android:id="@+id/btnSave"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"  
-        android:layout_marginTop="20dp"
-        android:background="#EE3B3B"
-        android:textColor="#ffffff"      
-        android:text="保存" />
-
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="#D3D3D3"        
-        android:text="キャンセル" />
-    
+        android:padding="10dp">
+        <Button
+            android:id="@+id/button_cancel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#D3D3D3"
+            android:text="@string/edit_task__cancel_button" />
+        <Space android:layout_width="10dp"
+               android:layout_height="match_parent" />
+        <Button
+            android:id="@+id/button_save"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#EE3B3B"
+            android:textColor="#ffffff"
+            android:text="@string/edit_task__save_button" />
+    </LinearLayout>
 
 </LinearLayout>
