--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,65 +1,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/LayoutVerticalStyle"
-    android:layout_gravity="end" >
+              style="@style/LayoutVerticalStyle"
+              android:layout_gravity="end" >
 
-    <LinearLayout
-        style="@style/LayoutVerticalStyle"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
+  <LinearLayout
+      style="@style/LayoutVerticalStyle"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="10dp" >
 
-        <TextView
-            android:id="@+id/validation"
-            style="@style/ErrorLableStyle"
-            android:layout_marginTop="10dp"
-            android:text="@string/mesError"
-            android:visibility="gone" />
-
-        <TextView
-            style="@style/SettingLableStyle"
-            android:text="@string/txtId"
-            android:textSize="8pt" />
-
-        <EditText
-            android:id="@+id/txtIdLogin"
-            style="@style/HomeTxtDescStyle"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="start|center_horizontal"
-            android:background="@drawable/edit_text_border_style"
-            android:maxLength="20"
-            android:paddingLeft="5dp" />
-
-        <TextView
-            style="@style/SettingLableStyle"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/txtPassword"
-            android:textSize="8pt" />
-
-        <EditText
-            android:id="@+id/txtPasswordLogin"
-            style="@style/HomeTxtDescStyle"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="start|center_horizontal"
-            android:background="@drawable/edit_text_border_style"
-            android:inputType="textPassword"
-            android:maxLength="20"
-            android:paddingLeft="5dp" />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnLogin"
-        style="@style/ButtonStyle"
+    <TextView
+        android:id="@+id/text_error_messages"
+        android:text="@string/message_error__wrong_input"
+        style="@style/ErrorLabelStyle"
         android:layout_marginTop="10dp"
-        android:background="@drawable/my_button"
-        android:text="@string/btnLogin" />
+        android:visibility="gone" />
 
-    <LinearLayout
-        style="@style/LayoutVerticalStyle"
-        android:gravity="center_horizontal" >
-    </LinearLayout>
+    <TextView
+        android:text="@string/form_filed__id"
+        style="@style/SettingLabelStyle"
+        android:textSize="8pt" />
+
+    <EditText
+        android:id="@+id/edit_login_id"
+        android:inputType="textNoSuggestions"
+        android:maxLength="20"
+        style="@style/HomeTextDescriptionStyle"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="start|center_horizontal"
+        android:background="@drawable/edit_text_border_style"
+        android:paddingLeft="5dp" />
+
+    <TextView
+        android:text="@string/form_filed__password"
+        style="@style/SettingLabelStyle"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="8pt" />
+
+    <EditText
+        android:id="@+id/edit_password"
+        android:inputType="textPassword"
+        android:maxLength="20"
+        style="@style/HomeTextDescriptionStyle"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="start|center_horizontal"
+        android:background="@drawable/edit_text_border_style"
+        android:paddingLeft="5dp" />
+
+  </LinearLayout>
+
+  <Button
+      android:id="@+id/button_login"
+      android:text="@string/login__login_button"
+      style="@style/ButtonStyle"
+      android:layout_marginTop="10dp"
+      android:background="@drawable/my_button" />
+
+  <LinearLayout
+      style="@style/LayoutVerticalStyle"
+      android:gravity="center_horizontal" >
+  </LinearLayout>
 
 </LinearLayout>
