--- a/res/layout/group_header_item.xml
+++ b/res/layout/group_header_item.xml
@@ -10,18 +10,18 @@
     android:paddingRight="10dp" >
 
     <TextView
-        android:id="@+id/groupTitle"
+        android:id="@+id/text_group_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:text="Group Header"
+        android:text=""
         android:textStyle="bold"
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/btnCreateNewTask"
+        android:id="@+id/button_add_task"
         android:layout_width="29dp"
         android:layout_height="29dp"
         android:layout_alignParentRight="true"
