--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -18,7 +18,7 @@
         android:paddingRight="10dp" >
 
         <TextView
-            android:id="@+id/taskTitle"
+            android:id="@+id/text_task_title"
             android:layout_width="260dp"
             android:layout_height="wrap_content"
             android:focusable="false"
@@ -30,7 +30,7 @@
             android:text="" />
 
         <Button
-            android:id="@+id/btnDeleteTask"
+            android:id="@+id/button_delete_task"
             android:layout_width="29dp"
             android:layout_height="29dp"
             android:focusable="false"
@@ -49,7 +49,7 @@
         android:visibility="visible" >
 
         <Button
-            android:id="@+id/btnFinished"
+            android:id="@+id/button_done"
             android:layout_width="29dp"
             android:layout_height="29dp"
             android:layout_margin="10dp"
@@ -59,7 +59,7 @@
             android:text="" />
 
         <Button
-            android:id="@+id/btnImportant"
+            android:id="@+id/button_important"
             android:layout_width="29dp"
             android:layout_height="29dp"
             android:layout_margin="10dp"
@@ -69,7 +69,7 @@
             android:text="" />
 
         <Button
-            android:id="@+id/btnDelete"
+            android:id="@+id/button_delete"
             android:layout_width="29dp"
             android:layout_height="29dp"
             android:layout_margin="10dp"
@@ -79,7 +79,7 @@
             android:text="" />
 
         <Button
-            android:id="@+id/btnEdit"
+            android:id="@+id/button_edit"
             android:layout_width="29dp"
             android:layout_height="29dp"
             android:layout_margin="10dp"
