--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -40,14 +40,18 @@
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">wrap_content</item>        
     </style>
-	<style name="HomeTxtDescStyle">
+    <style name="HomeImageStyle">
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
+	<style name="HomeTextDescriptionStyle">
       <item name="android:layout_width">fill_parent</item>
       <item name="android:layout_height">wrap_content</item>      
       <item name="android:textSize">9pt</item>
       <item name="android:textColor">#000000</item>
       <item name="android:layout_margin">10dp</item>       
     </style>
-    <style name="txtPasswordReminder">
+    <style name="ForgotPasswordStyle">
       <item name="android:layout_width">wrap_content</item>
       <item name="android:layout_height">wrap_content</item>
       <item name="android:layout_gravity">center|right</item>
@@ -55,27 +59,21 @@
       <item name="android:textColor">#000000</item>
       <item name="android:layout_margin">10dp</item>      
     </style>
-    
-    <style name="HomeImgStyle">
-             
-      <item name="android:layout_marginLeft">10dp</item>           
-      <item name="android:layout_marginBottom">5dp</item>	  	                 
-   </style>          
-    <style name="PasswordReminderDecsLableStyle">       
-       <item name="android:layout_width">fill_parent</item>
-      <item name="android:layout_height">wrap_content</item>      
-      <item name="android:textSize">6pt</item>
-      <item name="android:textColor">#000000</item>
-      <item name="android:layout_marginLeft">10dp</item>   
+    <style name="ForgotPasswordDescriptionLabelStyle">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">6pt</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_marginLeft">10dp</item>
     </style>
-    <style name="ErrorLableStyle">       
+    <style name="ErrorLabelStyle">
        <item name="android:layout_width">fill_parent</item>
       <item name="android:layout_height">wrap_content</item>      
       <item name="android:textSize">7pt</item>
       <item name="android:textColor">#FF1702</item>
       <item name="android:layout_marginLeft">10dp</item>   
     </style>
-   <style name="SettingLableStyle">       
+   <style name="SettingLabelStyle">
       <item name="android:layout_width">fill_parent</item>
       <item name="android:layout_height">wrap_content</item>      
       <item name="android:textSize">6pt</item>
